[tool.poetry]
name = "intelligent-dbagent"
version = "0.1.0"
description = "An intelligent DB agent, where you can interact with your tabulat data in human language"
authors = ["Ajay Mancheery"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
langchain = "^0.2.13"
langchain-openai = "^0.1.21"
langchain-experimental = "^0.0.64"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
